# yazam.tatar

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TEST_PLAN.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check_links.yml  dependency-audit.yml  dev-deploy.yml  dev-init.yml  environment-deploy.yml  environment-init.yml  qa-full.yml  release.yml  runtime-observability.yml  web-smoke.yml
backend/: __init__.py  cache.py  correction_policy.py  gemini.py  main.py  metrics.py  models.py  polza.py  rate_limit.py  settings.py
backend/tests/: test_api.py  test_e2e.py  test_gemini.py  test_models.py  test_polza.py  test_settings.py  test_utils.py
client/: analysis_options.yaml  pubspec.yaml
client/assets/: config.json
client/assets/i18n/: en.json  ru.json  tt.json
client/lib/: app_config.dart  app_state.dart  backend_client.dart  history_store.dart  i18n.dart  main.dart  models.dart  settings_store.dart
client/lib/sheets/: history_sheet.dart  (+2 more)
client/test/: app_state_test.dart  models_test.dart  widget_panels_test.dart  widget_test.dart
client/web/: index.html  manifest.json  robots.txt  sitemap.xml
deploy/: README.md  build_web_static.sh  dev_deploy.sh  dev_init.sh  gec-tt-vpn-policy.sh  prod_tls_hardening.sh  run_dev.sh
deploy/nginx/: gec-tt-app.conf  gec-tt-root.conf  gec-tt-site.conf
deploy/systemd/: gec-tt-vpn-policy.service
tools/: check_web_static.py
webapp/: app.js  index.html  manifest.json  styles.css
webapp-tests/: playwright.config.js  smoke.spec.js
(+2 files in other folders)
